--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,9 +6,9 @@
   title={Posterior sampling for image restoration using explicit patch priors},
   author={Friedman, Roy and Weiss, Yair},
   journal={arXiv preprint arXiv:2104.09895},
-  year={2021}
-  selected={true}
-  url={https://arxiv.org/abs/2104.09895}
+  year={2021},
+  selected={true},
+  url={https://arxiv.org/abs/2104.09895},
   pdf={https://arxiv.org/pdf/2104.09895.pdf}
 }
 
@@ -20,8 +20,8 @@
   number={8},
   pages={1901222},
   year={2020},
-  publisher={Wiley Online Library}
-  url={https://onlinelibrary.wiley.com/doi/full/10.1002/advs.201901222}
+  publisher={Wiley Online Library},
+  url={https://onlinelibrary.wiley.com/doi/full/10.1002/advs.201901222},
   pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1002/advs.201901222}
 }
 
