--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,15 @@
 ---
 
 @article{friedman2021posterior,
+  bibtex_show={false},
+  title={HIGlow: Conditional Normalizing Flows for High-Fidelity HI Map Modeling},
+  author={Friedman, Roy and Hassan, Sultan},
+  journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
+  year={2022},
+  selected={true}
+}
+
+@article{friedman2021posterior,
   bibtex_show={true},
   title={Posterior sampling for image restoration using explicit patch priors},
   author={Friedman, Roy and Weiss, Yair},
@@ -24,4 +33,3 @@
   url={https://onlinelibrary.wiley.com/doi/full/10.1002/advs.201901222},
   pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1002/advs.201901222}
 }
-
