--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -8,12 +8,13 @@ authors:
     affiliations:
       name: Hebrew University
 
-bibliography: 2022-11-01-Langevin.bib
+bibliography: assets/bibliography/2022-11-01-Langevin.bib
 
 toc:
   - name: Problem Setting
   - name: Langevin Sampling
   - name: Annealed Langevin
+  - name: Conclusion
 ---
 
 Langevin dynamics (or sampling) <d-cite key="langevin"></d-cite> is one of the most popular [Markov chain Monte Carlo](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo) (MCMC) methods out there. It is used for countless tasks where sampling is involved, and is even simpler to use since automatic differentiation is easily accessible. While simple to implement, I think that it's hard to build an intuition for what to expect without seeing simple use cases. In this post, I want to try and build the intuition for the sampling procedure itself, the stationary distribution that will be reached, and how to mitigate possible problems with the sampling procedure.
@@ -31,7 +32,7 @@ $$
 
 where $x\in\mathbb{R}^d$  and $f(x)$ is some function so that the integral $\intop e^{-f(x)}dx$  doesn't diverge (i.e. $p(x)$ is a valid distribution). 
 
-We would like to sample from this distribution, but don't have any way to do so directly. Worse, we don't know the conditional or marginal distributions under this PDF, so we can't use methods such as [Gibbs sampling](https://en.wikipedia.org/wiki/Gibbs_sampling). However, what we _do_ have is the gradient of the function at every point: $\nabla f(x)$ <d-footnote>The function $f(x)$ is sometimes called the _energy_ function and the negative gradient the _potential_ function</d-footnote>.
+We would like to sample from this distribution, but don't have any way to do so directly. Worse, we don't know the conditional or marginal distributions under this PDF, so we can't use methods such as [Gibbs sampling](https://en.wikipedia.org/wiki/Gibbs_sampling). However, what we _do_ have is the gradient of the function at every point: $\nabla f(x)$ <d-footnote>The function $f(x)$ is sometimes called the energy function and the negative gradient the potential function</d-footnote>.
 
 While we don't know the distribution itself, we obviously know quite a bit about the distribution if we know how to differentiate it. Specifically, we can use gradient descent (GD) in order to find the modes of the distribution:
 
@@ -101,16 +102,18 @@ style="display: inline-block; margin: 0 auto; ">
     Figure 3: another example of a single chain of Langevin sampling, only on a narrower Gaussian. While the chain reaches the bright part of the distribution quite quickly, it always remains in the top half (for all 800 iterations).
 </div>
 
-The chain arrives at the distribution fast enough, but then stays in the upper half of the distribution for it's whole life time - for 800 iterations! This means that if we want to sample two points $x^{(1)}_T$  and $x^{(2)}_T$ , which are initialized close to each other, then they will probably be very close to each other even after 800 iterations. In MCMC terms, we would say that the chain hasn't _mixed_ yet. This is in contrast to the example in figure 1, where ~200 iterations are enough for the chain to mix.
+The chain arrives at the distribution fast enough, but then stays in the upper half of the distribution for it's whole life time - for 800 iterations! This means that if we want to sample two points $x^{(1)}_{T}$  and $x^{(2)}_{T}$ , which are initialized close to each other, then they will probably be very close to each other even after 800 iterations. In MCMC terms, we would say that the chain hasn't _mixed_ yet. This is in contrast to the example in figure 1, where ~200 iterations are enough for the chain to mix.
 
 In this case, intuition calls for a very simple modification - change the step size! If we increase the step size, then the dot would move further each iteration, and the chain would "mix" very rapidly, right? However, finding the right value for $\epsilon$ is actually pretty difficult. Consider the following toy example:
 
+<div class="fake-img l-page">
 <p align="center">
 <img  
 src="https://friedmanroy.github.io/assets/blog_figs/Langevin/bad_langevin.png"  
 alt="Langevin on a narrow Gaussian"  
 style="display: inline-block; margin: 0 auto; ">
 </p>
+</div>
 <div class="caption">
     Figure 4: an example of bad settings of $\epsilon$. On the left, you can see the distribution and true samples from it. The middle two images show what happens when $\epsilon$ is too large (left) and too small (right). The right-most graph shows the average negative log-likelihood (the average value of $f(x)$ ) for each of the images to the left of it.
 </div>
