--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -120,7 +120,8 @@ In this case, intuition calls for a very simple modification - change the step s
 <img  
 src="https://friedmanroy.github.io/assets/blog_figs/Langevin/bad_langevin.png"  
 alt="Langevin on a narrow Gaussian"  
-style="display: inline-block; margin: 0 auto; ">
+style="display: inline-block; margin: 0 auto; "
+width="auto">
 </p>
 </div>
 <div class="caption">
