--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -115,13 +115,12 @@ The chain arrives at the distribution fast enough, but then stays in the upper h
 
 In this case, intuition calls for a very simple modification - change the step size! If we increase the step size, then the dot would move further each iteration, and the chain would "mix" very rapidly, right? However, finding the right value for $\epsilon$ is actually pretty difficult. Consider the following toy example:
 
-<div class="l-page">
+<div class="fake-img l-body">
 <p align="center">
 <img  
 src="https://friedmanroy.github.io/assets/blog_figs/Langevin/bad_langevin.png"  
 alt="Langevin on a narrow Gaussian"  
-style="display: inline-block; margin: 0 auto; "
-width="auto">
+style="display: inline-block; margin: 0 auto; ">
 </p>
 </div>
 <div class="caption">
