--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -111,7 +111,7 @@ style="display: inline-block; margin: 0 auto; ">
     Figure 3: another example of a single chain of Langevin sampling, only on a narrower Gaussian. While the chain reaches the bright part of the distribution quite quickly, it always remains in the top half (for all 800 iterations).
 </div>
 
-The chain arrives at the distribution fast enough, but then stays in the upper half of the distribution for it's whole life time - for 800 iterations! This means that if we want to sample two points $x^{(1)}_{T}$  and $x^{(2)}_{T}$ , which are initialized close to each other, then they will probably be very close to each other even after 800 iterations. In MCMC terms, we would say that the chain hasn't _mixed_ yet. This is in contrast to the example in figure 1, where ~200 iterations are enough for the chain to mix.
+The chain arrives at the distribution fast enough, but then stays in the upper half of the distribution for it's whole life time - for 800 iterations! This means that if we want to sample two points , which are initialized close to each other, then they will probably be very close to each other even after 800 iterations. In MCMC terms, we would say that the chain hasn't _mixed_ yet. This is in contrast to the example in figure 1, where ~200 iterations are enough for the chain to mix.
 
 In this case, intuition calls for a very simple modification - change the step size! If we increase the step size, then the dot would move further each iteration, and the chain would "mix" very rapidly, right? However, finding the right value for $\epsilon$ is actually pretty difficult. Consider the following toy example:
 
