--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,8 @@
   journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
   year={2022},
   selected={true}
+  url={https://arxiv.org/abs/2211.12724},
+  pdf={https://arxiv.org/pdf/2211.12724.pdf}
 }
 
 @article{friedman2021posterior,
