--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   author={Friedman, Roy and Hassan, Sultan},
   journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
   year={2022},
-  selected={true}
+  selected={true},
   url={https://arxiv.org/abs/2211.12724},
   pdf={https://arxiv.org/pdf/2211.12724.pdf}
 }
