--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,15 +7,20 @@
   journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
   year={2022},
   selected={true},
+  doi = {10.48550/ARXIV.2211.12724},
   url={https://arxiv.org/abs/2211.12724},
   pdf={https://arxiv.org/pdf/2211.12724.pdf}
 }
+
 
 @article{friedman2021posterior,
   bibtex_show={true},
   title={Posterior sampling for image restoration using explicit patch priors},
   author={Friedman, Roy and Weiss, Yair},
+  doi = {10.48550/ARXIV.2104.09895},
   journal={arXiv preprint arXiv:2104.09895},
+  copyright = {Creative Commons Attribution 4.0 International},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
   year={2021},
   selected={true},
   url={https://arxiv.org/abs/2104.09895},
