--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -1,5 +1,6 @@
 ---
 layout: distill
+comments: true
 title: A Simplified Overview of Langevin Dynamics
 description: An overview of Langevin dynamics (or sampling), with a focus on building up intuition for how it works, when it works, and what can be done to make it work when it doesn't.
 
