--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{friedman2021posterior,
+@article{HIglow2022friedman,
   title={HIGlow: Conditional Normalizing Flows for High-Fidelity HI Map Modeling},
   author={Friedman, Roy and Hassan, Sultan},
   journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
