--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 
 
 @article{friedman2021posterior,
-  title={Posterior sampling for image restoration using explicit patch priors},
+  title={Posterior Sampling for Image Restoration using Explicit Patch Priors},
   author={Friedman, Roy and Weiss, Yair},
   doi = {10.48550/ARXIV.2104.09895},
   journal={arXiv preprint arXiv:2104.09895},
@@ -27,7 +27,7 @@
 }
 
 @article{wintner2020unified,
-  title={A unified linear viscoelastic model of the cell nucleus defines the mechanical contributions of lamins and chromatin},
+  title={A Unified Linear Viscoelastic Model of the Cell Nucleus Defines the Mechanical Contributions of Lamins and Chromatin},
   author={Wintner, Oren and Hirsch-Attas, Nivi and Schlossberg, Miriam and Brofman, Fani and Friedman, Roy and Kupervaser, Meital and Kitsberg, Danny and Buxboim, Amnon},
   journal={Advanced Science},
   volume={7},
